@@ -1078,6 +1078,9 @@
                                 --add-opens=java.base/java.security=ALL-UNNAMED
                                 --add-opens=java.management/sun.management=ALL-UNNAMED
                                 --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
